gen/cloudbilling/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-cloudbilling1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/cloudbilling/v1/lib)
error[E0423]: expected value, found struct `projects::ProjectsActions`
    --> gen/cloudbilling/v1/lib/src/lib.rs:1146:13
     |
1146 |             projects::ProjectsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `projects::ProjectsActions { /* fields */ }`?

error[E0423]: expected value, found struct `skus::SkusActions`
    --> gen/cloudbilling/v1/lib/src/lib.rs:2761:13
     |
2761 |             skus::SkusActions
     |             ^^^^^^^^^^^^^^^^^ did you mean `skus::SkusActions { /* fields */ }`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-cloudbilling1`.

To learn more, run the command again with --verbose.
